--- a/AssetsFix2/Guru.html
+++ b/AssetsFix2/Guru.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="C:\Users\DELL\Pictures\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="img\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
             MI Pasir Bentik
           </a>
           </a>
@@ -63,63 +63,63 @@
             <h2 class="display-5">Tenaga Pendidik</h2>
             <div class="row pt-5 gx-4 gy-4">
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\Kepsek1.jpg"
+                    <img src="img\Kepsek1.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Andri Yansyah</h4>
                     <p>Kepala Sekolah</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\operator1.jpg"
+                    <img src="img\operator1.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Rahmat Hidayat</h4>
                     <p>Operator & Guru Kelas 6</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\guru.jpg"
+                    <img src="img\guru.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Zaenudin Afgani</h4>
                     <p>Guru Kelas 5</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\Kepsek1.jpg"
+                    <img src="img\Kepsek1.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Andri Yansyah</h4>
                     <p>Kepala Sekolah</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\operator1.jpg"
+                    <img src="img\operator1.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Rahmat Hidayat</h4>
                     <p>Operator & Guru Kelas 6</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\guru.jpg"
+                    <img src="img\guru.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Zaenudin Afgani</h4>
                     <p>Guru Kelas 5</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\Kepsek1.jpg"
+                    <img src="img\Kepsek1.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Andri Yansyah</h4>
                     <p>Kepala Sekolah</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\operator1.jpg"
+                    <img src="img\operator1.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Rahmat Hidayat</h4>
                     <p>Operator & Guru Kelas 6</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\guru.jpg"
+                    <img src="img\guru.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Zaenudin Afgani</h4>
