--- a/AssetsFix2/Non Akademik.html
+++ b/AssetsFix2/Non Akademik.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="C:\Users\DELL\Pictures\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="img\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
             MI Pasir Bentik
           </a>
           </a>
@@ -64,7 +64,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
             <div class="clearfix pt-5">
-              <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Web App\img\bangunan.jpg" class="card-img-top" alt="...">
+              <img src="img\bangunan.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -73,7 +73,7 @@
           </div>
           <div class="col">
             <div class="clearfix pt-5">
-              <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Web App\img\bangunan.jpg" class="card-img-top" alt="...">
+              <img src="img\bangunan.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
