--- a/AssetsFix2/Sejarah.html
+++ b/AssetsFix2/Sejarah.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="C:\Users\DELL\Pictures\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="img\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
             MI Pasir Bentik
           </a>
           </a>
@@ -63,7 +63,7 @@
         <div class="container">
             <h2 class="display-5 text-center">Sejarah</h2>
             <div class="clearfix pt-5">
-                <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Web App\img\bangunan.jpg"
+                <img src="img\bangunan.jpg"
                 class="col-md-6 float-md-end mb-3" 
                 width="300" 
                 height="300"/>
