--- a/AssetsFix2/index.html
+++ b/AssetsFix2/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="C:\Users\DELL\Pictures\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="img\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
             MI Pasir Bentik
           </a>
           </a>
@@ -34,6 +34,7 @@
                   <li><a class="dropdown-item" href="Sejarah.html">Sejarah</a></li>
                   <li><a class="dropdown-item" href="#Visi Misi">Visi Misi</a></li>
                   <li><a class="dropdown-item" href="Guru.html">Tenaga Pendidik</a></li>
+                  <li><a class="dropdown-item" href="#">Berita</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -70,7 +71,7 @@
         <div class="container">
             <h2 class="display-5 text-center">Visi Misi</h2>
             <div class="clearfix pt-5">
-                <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Web App\img\bangunan.jpg"
+                <img src="img\bangunan.jpg"
                 class="col-md-6 float-md-end mb-3" 
                 width="300" 
                 height="300"/>
@@ -91,21 +92,21 @@
             <h2 class="display-5">Tenaga Pendidik</h2>
             <div class="row pt-5 gx-4 gy-4">
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\Kepsek1.jpg"
+                    <img src="img\Kepsek1.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Andri Yansyah</h4>
                     <p>Kepala Sekolah</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\operator1.jpg"
+                    <img src="img\operator1.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Rahmat Hidayat</h4>
                     <p>Operator & Guru Kelas 6</p>
                 </div>
                 <div class="col-md-4 text-center tim">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\guru.jpg"
+                    <img src="img\guru.jpg"
                     class="rounded-circle mb-3"
                     />
                     <h4>Zaenudin Afgani</h4>
@@ -124,7 +125,7 @@
             <div class="row pt-5 gx-4 gy-4">
               <div class="col-md-4">
                 <div class="card">
-                  <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\bangunan.jpg" 
+                  <img src="img\bangunan.jpg" 
                   class="card-img-top"
                   width="200"
                   height="200"
@@ -138,7 +139,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card">
-                  <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\RA.jpg" 
+                  <img src="img\RA.jpg" 
                   class="card-img-top"
                   width="200"
                   height="200"
@@ -152,7 +153,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card">
-                  <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Tugas 5 Web\img\lulus.jpg" 
+                  <img src="img\lulus.jpg" 
                   class="card-img-top"
                   width="200"
                   height="200"
