--- a/AssetsFix2/Akademik.html
+++ b/AssetsFix2/Akademik.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="C:\Users\DELL\Pictures\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="img\e469d373-c20e-44a8-af94-3cd3dc6bcb16.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
             MI Pasir Bentik
           </a>
           </a>
@@ -24,7 +24,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="MI baru.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,6 +34,7 @@
                   <li><a class="dropdown-item" href="Sejarah.html">Sejarah</a></li>
                   <li><a class="dropdown-item" href="MI baru.html">Visi Misi</a></li>
                   <li><a class="dropdown-item" href="Guru.html">Tenaga Pendidik</a></li>
+                  <li><a class="dropdown-item" href="#">Berita</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -63,7 +64,7 @@
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                   <div class="clearfix pt-5">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Web App\img\bangunan.jpg" class="card-img-top" alt="...">
+                    <img src="img\bangunan.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -72,7 +73,7 @@
                 </div>
                 <div class="col">
                   <div class="clearfix pt-5">
-                    <img src="D:\SEMESTER 5 NI BOSS\Pengembangan App web\Web App\img\bangunan.jpg" class="card-img-top" alt="...">
+                    <img src="img\bangunan.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
